--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <title>Website</title>
-    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <h1>Esha Anand</h1>
 <h2>yay!</h2>
 
 <h3>Beginning</h3>
-<p><img src=""><!--add image!!!!!!-->Since I was born, I loved to move. My greatest joys in life came from running far aw6ay from my parents and dancing randomly to music. There were other things I loved too: I loved to be hands-on; I loved building complex structures of <a href="https://www.lego.com/en-us" target="_blank">Lego</a> blocks and Jenga and tearing them down. I loved stories — reading about fantastical worlds, and dreaming that I would end up in one. I loved astronomy, space, and the unknown worlds beyond our galaxy, but my love for movement has developed the most.</p>
+<p><img src="images/esha1.jpg">Since I was born, I loved to move. My greatest joys in life came from running far aw6ay from my parents and dancing randomly to music. There were other things I loved too: I loved to be hands-on; I loved building complex structures of <a href="https://www.lego.com/en-us" target="_blank">Lego</a> blocks and Jenga and tearing them down. I loved stories — reading about fantastical worlds, and dreaming that I would end up in one. I loved astronomy, space, and the unknown worlds beyond our galaxy, but my love for movement has developed the most.</p>
 
 <h3>Childhood</h3>
 <p><img src="images/space2.jpg">As a child, I jumped from one passion to the next. My earliest dream at 5 years old was to be an astronomer; to plan space missions, build rockets, and explore the depths of our universe. I loved space so much that I became known in my small elementary school for being such a space geek. In fourth grade, I suddenly decided that space was not it for me anymore — I wanted to be a spy. I spent hours researching how to join the <a href="https://www.cia.gov/" target="_blank">CIA</a>, solving puzzles, and reading as many mystery books as I could. Then the pandemic hit, and social media caused me to imagine a life where I was a freelance artist. When I returned to school in seventh grade, I felt confused by the amalgamation of my interests and had no idea where I would end up in life.</p>
