--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<div id="container">
 <body>
 <h1>Esha Anand</h1>
 <h2>yay!</h2>
@@ -28,4 +29,5 @@
 <p><img src="images/theater2.jpg">I had always been interested in <a href="https://en.wikipedia.org/wiki/Dance" target="_blank">dance</a>. My mom was a dancer when she was younger, but education and moving to the U.S. forced her to tone down her interest. My grandmother and aunt were also heavily interested in dance, so it was natural for me to take it up. Being so interested in science meant I shunned art and dance for the first few years, but my interest in dance sparked during the pandemic, when I was forced to stay home so long with nothing to do but practice. I realized that dance was not just a foolish pursuit and that there were so many ways I could use it in my life. Though I never wanted to obsessively pursue it the same way I wanted to do other things as a child, dance has helped me understand myself and my various passions.</p>
 
 </body>
+</div>
 </html>
